--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "Sign up") %>
+<% provide(:title, "Sign Up") %>
 
-<h1>Sign up</h1>
+<h1>Sign Up</h1>
 <p>This is the signup page for the sample app</p>
 
